Bug 228005 - shutdown/reboot/logout don't work when sytemsounds are activ
Summary: shutdown/reboot/logout don't work when sytemsounds are activ
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Unspecified
: NOR normal
Target Milestone: ---
Assignee: Lubos Lunak
URL:
Keywords:
: 284503 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-22 08:10 UTC by Thies Schröder
Modified: 2012-12-31 17:12 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thies Schröder 2010-02-22 08:10:28 UTC
Version:            (using KDE 4.4.0)
Installed from:    Archlinux Packages

after upgrade to kde4.4 shutdown/reboot/logout doesn't work anymore.
After the first klick, shutdown in 30sec dialog appears, but on click nothing happens, on second try no dialog appears.

After disabeling sytemsounds shutdown work. Seems to be 	reproducible. See http://forum.kde.org/viewtopic.php?f=66&t=85859
Comment 1 mfabry@gmail.com 2010-02-22 10:53:47 UTC
I have the same problem. On my system only one user is affected (the most frequently used account). Kubuntu Karmic Koala x64.
Comment 2 linux 2010-03-05 19:36:57 UTC
Confirmed. 

I suddenly had the same problem. 
Once I turn off system notifications, I am able to shutdown / logoff.

Jaunty 9.04 with KDE 4.3.2

It started after I did an update... sorry can't remember the exact one but it had to do with sudo
Comment 3 mfabry@gmail.com 2010-03-05 20:45:21 UTC
It might be something to do with sudo. I used the affected user account for all administrative tasks - including updates through sudo and apt-get. I don't like graphical tools for such things. I always use console. I wonder if this is a permission problem or perhaps some buggy configuration files somewhere in home directory. Removing .kde folder doesn't help unfortunately.
Comment 4 Terényi, Balázs 2010-03-12 10:35:34 UTC
Exactly the same here with OpenSuSE 11.2 KDE upgraded to 4.4
I unchecked the "Play a sound" option at Logout in system notification settings, and it works (thanks for the info Thies)
Comment 5 mfabry@gmail.com 2010-03-22 00:42:20 UTC
I still don't know what caused my problems, but a full upgrade to a newer version of my distro turned out to be a cure. I can log out and do a reboot/shutdown while sound notifications are still active and working properly. I guess problem lies somewhere deeper than I thought.
Comment 6 linux fan 2010-04-04 18:58:58 UTC
Problem is still present in KDE 4.4.2
Comment 7 linux fan 2010-04-04 19:00:33 UTC
*** This bug has been confirmed by popular vote. ***
Comment 8 Daniele E. Domenichelli 2010-06-22 15:34:48 UTC
The problem is still present in trunk (KDE Platform Version: 4.4.86 (KDE 4.4.86 (KDE 4.5 >= 20100616)) (Compiled from sources))

It might be related to https://bugs.kde.org/show_bug.cgi?id=242470
Comment 9 Andreas K. Huettel 2010-11-03 00:36:52 UTC
This is also reported in Gentoo bugzilla:
http://bugs.gentoo.org/show_bug.cgi?id=326393

Does anyone know if the problem is still there for kde-4.5.x ?
Comment 10 linux fan 2010-11-03 13:44:22 UTC
When I had the problem, it was due to an inoperable phonon backend for sounds which meant that system sounds could not play and as a result, those things which play a sound shutdown/reboot/logout did not operate due to failure of playing the sound. Setting the sounds not to play for those operations was the quick fix for me in 4.4.2. Fixing my phonon installation was the fix for me when it happened in 4.4.2.
Comment 11 Henrikki Almusa 2010-11-12 14:20:43 UTC
I have this same problem from time to time. However I have remove all sound notifications from everything (where is that remove all sound notifications button!). Also my player setting is in 'No audio'. No help what so ever.

Kubuntu 10.10
KDE 4.5.1
Comment 12 Markus Blaschke 2010-11-30 00:03:13 UTC
Same problem on Kubuntu 10.10 with KDE 4.5.3.
At least 2 users are unable to shutdown, reboot or logout from the system (nearly every day).. Hibernate/Sleep works...

This problem was introduced with upgrade fom Kubuntu 10.4 to Kubuntu 10.10.

Cleaning the whole KDE-profile of a user diddn't work - KDE is unusable now, that sucks :( .. Every time "root" have to reboot the system, that's no solution.
Comment 13 Chris 2011-01-11 22:18:48 UTC
I experience the same problems under KDE 4.5.4 and KDE 4.5.4 in Arch. Turning off system notification sounds solves the problem.
Comment 14 白川間瀬流 2011-01-18 11:51:57 UTC
Installing speex helped the Archlinux guys and also helped me.
Comment 15 白川間瀬流 2011-01-18 11:53:06 UTC
(In reply to comment #14)
> Installing speex helped the Archlinux guys and also helped me.

i was able to reproduce it and speex defenetly solves this ""problem""
Comment 16 Markus Blaschke 2011-01-19 21:41:17 UTC
Also with KDE 4.5.5 (Kubuntu 10.10) and some more systems are affected (including fresh Kubuntu installations) ... and still no progress/solution.

Installation of "speex" doesn't help under Kubuntu.

It's pain in the ass to sudo shutdown to force a "hard restart/reboot"
Comment 17 Balcaen John 2011-02-22 11:21:40 UTC
An easy way to reproduce it here (on mageia & probably on every distro) is to simply add a non existence log out sound in ~/.kde/share/kde.notifyrc

[Event/exitkde]
Action=Sound
Execute=
KTTS=
Logfile=
Sound=file:///usr/share/sounds/asoundthatdoesnotexit.wav
Comment 18 Andreas K. Huettel 2011-05-14 16:10:16 UTC
Problem also present in kde-4.6.2 on Gentoo, see
https://bugs.gentoo.org/show_bug.cgi?id=326393
Comment 19 DimanNe 2011-10-17 14:33:32 UTC
The problem still present in KDE 4.6.5

%uname -a
FreeBSD Impedance.campus.mipt.ru. 9.0-BETA3 FreeBSD 9.0-BETA3 #0: Thu Oct 13 08:46:31 MSD 2011     root@Impedance.campus.mipt.ru.:/usr/obj/usr/src/sys/GENERIC  amd64
Comment 20 Peter O'Gorman (The Written Word, Inc.) 2011-12-31 03:17:39 UTC
ksmserver has this:
         KNotification *n = KNotification::event( "exitkde" , QString() , QPixmap() , 0l ,  KNotification::DefaultEvent  ); // KDE says good bye
         connect(n, SIGNAL( closed() ) , this, SLOT(logoutSoundFinished()) );

Unfortunately if sound is broken somehow (in our case by neglecting to install any phonon backends), then the closed() signal never happens, and logoutSoundFinished() doesn't go on its killing spree, all the processes remain alive.
Comment 21 Lamarque V. Souza 2012-01-30 14:08:38 UTC
*** Bug 284503 has been marked as a duplicate of this bug. ***
Comment 22 Lamarque V. Souza 2012-02-27 22:39:37 UTC
Git commit 82d5f2a118a9a40e18b86628a3dc3109adf4f7bc by Lamarque V. Souza.
Committed on 27/02/2012 at 23:35.
Pushed by lvsouza into branch 'KDE/4.8'.

Add timeout for logoutSoundFinished() signal to prevent shutdown process
from stopping because of broken sound system.
Thanks to Peter OGorman for pointing this problem out.

REVIEW: 103593
(cherry picked from commit ad188bfdb06af50448acbbde00556ebc3d29f418)

M  +1    -0    ksmserver/server.h
M  +15   -0    ksmserver/shutdown.cpp

http://commits.kde.org/kde-workspace/82d5f2a118a9a40e18b86628a3dc3109adf4f7bc
Comment 23 Lamarque V. Souza 2012-02-27 22:39:43 UTC
Git commit ad188bfdb06af50448acbbde00556ebc3d29f418 by Lamarque V. Souza.
Committed on 27/02/2012 at 23:35.
Pushed by lvsouza into branch 'master'.

Add timeout for logoutSoundFinished() signal to prevent shutdown process
from stopping because of broken sound system.
Thanks to Peter OGorman for pointing this problem out.

REVIEW: 103593

M  +1    -0    ksmserver/server.h
M  +15   -0    ksmserver/shutdown.cpp

http://commits.kde.org/kde-workspace/ad188bfdb06af50448acbbde00556ebc3d29f418
Comment 24 Thomas Tanghus 2012-12-31 17:12:19 UTC
Doesn't seem to be entirely fixed. On Kubuntu 12.10 with KDE 4.9.4 I couldn't log out until I changed Phonon backend from GStreamer to VLC. Disabling the log out sound didn't help.