Add timeout for logoutSoundFinished() signal to prevent shutdown process from stopping because of broken sound system. Thanks to Peter OGorman for pointing this problem out.

REVIEW: 103593
BUG: 228005