ksmserver/server.h
@@ -126,6 +126,7 @@ private Q_SLOTS:
     void kcmPhase1Timeout();
     void kcmPhase2Timeout();
     void pendingShutdownTimeout();
+    void logoutSoundTimeout();
 
     void autoStart0();
     void autoStart1();
